Add running total to account statement view